--- a/ui.frontend/src/app/components/text/text.component.css
+++ b/ui.frontend/src/app/components/text/text.component.css
@@ -1,73 +1,81 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  border: 0;
-  font-size: 100%;
-  margin: 0;
-  padding: 0;
-  vertical-align: baseline;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: rgba(0, 0, 0, 0.8);
+.text-header {
+  font-family: "Inconsolata";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 25px;
+  letter-spacing: -0.08em;
   text-transform: uppercase;
+
+  color: #333333;
 }
 
-p {
-  color: rgba(0, 0, 0, 0.8);
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 32px;
-}
-
-h1 {
-  font-size: 48px;
-  letter-spacing: 0.8em;
-}
-
-h2 {
-  font-size: 48px;
+.title {
+  font-family: "Space Mono";
+  font-style: normal;
   font-weight: 700;
-  letter-spacing: 0.02em;
+  font-size: 64px;
+  line-height: 95px;
+  letter-spacing: -0.035em;
+
+  color: #333333;
+
+  margin-bottom: 36px;
 }
 
-h3 {
-  font-size: 18px;
-  font-weight: 700;
-  letter-spacing: 0.02em;
-  padding: 4px 0;
+.subtitle {
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 36px;
+  letter-spacing: -0.035em;
+
+  color: #4f4f4f;
+
+  margin-bottom: 64px;
 }
 
-h5 {
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 18px;
+.text-footer {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+
   text-align: center;
+  color: #bdbdbd;
 }
 
-@media (min-width: 651px) and (max-width: 1200px) {
-  h1 {
-    font-size: 30px;
+@media (max-width: 770px) {
+  .title {
+    font-size: 54px;
+    line-height: 71px; 
+  
+    margin-bottom: 30px;
   }
 
-  h2 {
-    font-size: 30px;
-  }
-
-  h3 {
-    font-weight: 400;
+  .subtitle {
+    font-size: 20px;
+    line-height: 27px; 
+  
+    margin-bottom: 66px;
   }
 }
 
-:host-context {
-  display: block;
+@media (max-width: 500px) {
+  .title {
+    font-size: 42px;
+    line-height: 61px; 
+  
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .subtitle {
+    font-size: 18px;
+    line-height: 27px; 
+  
+    margin-bottom: 36px;
+  }
 }
