--- a/ui.frontend/src/styles.scss
+++ b/ui.frontend/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@500&family=Space+Mono:wght@400;700&display=swap");
+@import url("http://fonts.cdnfonts.com/css/mark-pro");
 
 html,
 body {
@@ -17,7 +18,11 @@ body {
   box-sizing: border-box;
 }
 
-.cmp-container {
+.cmp-custom-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   &__header {
     display: flex;
     align-items: center;
@@ -58,6 +63,40 @@ body {
   }
 }
 
+.cmp-custom-image {
+  > div > img {
+    background-size: cover;
+  }
+}
+
+.cmp-background {
+  &__gray {
+    background: linear-gradient(180deg, #33383d 0%, #1c1d20 100%);
+    box-shadow: 4px 4px 70px rgba(0, 0, 0, 0.25);
+  }
+}
+
+@media (max-height: 1200px) {
+  .cmp-custom-container {
+    height: 100vh;
+  }
+
+  .cmp-custom-image {
+    > div > img {
+      height: 100vh;
+      object-fit: cover;
+    }
+  }
+}
+
+@media (max-height: 450px) {
+  .cmp-custom-image {
+    > div > img {
+      display: none;
+    }
+  }
+}
+
 @media (max-width: 390px) {
   .cmp-container__header {
     height: 60px;
@@ -73,5 +112,13 @@ body {
   .cmp-container__main {
     margin-top: 54px;
     margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .cmp-custom-image {
+    > div > img {
+      display: none;
+    }
   }
 }
