--- a/ui.frontend/src/app/components/weather/weather.component.html
+++ b/ui.frontend/src/app/components/weather/weather.component.html
@@ -1,4 +1,4 @@
 <div class="weather-container">
   <p class="local">Passo Fundo - RS</p>
-  <p class="temperature">22</p>
+  <p class="temperature">22°</p>
 </div>
