--- a/ui.frontend/src/app/components/header/header.component.html
+++ b/ui.frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header-container">
-  <ng-container *ngIf="hasImage">
-    <img [src]="imagePath"/>
+  <ng-container>
+    <img [src]="image.src" />  
   </ng-container>
   <app-clock></app-clock>
   <app-weather></app-weather>
