--- a/ui.frontend/src/app/components/footer/footer.component.html
+++ b/ui.frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer class="footer-container ">
+  <div class="left-container">
+    <p>
+      Essa janela do navegador é usada para manter sua sessão de autenticação
+      ativa. Deixe-a aberta em segundo plano e abra uma nova janela para
+      continuar a navegar.
+    </p>
+  </div>
+  <div class="right-container">
+      <div class="time-session">
+          <p class="time-session__label">Application refresh in</p>
+          <div class="time-session__timer">
+              <p class="seconds-number">10</p>
+              <p class="seconds-label">seconds</p>
+          </div>
+      </div> 
+      <button class="btn-keep-browsing">Continuar Navegando</button>
+      <button class="btn-logout">Logout</button>
+  </div>
+</footer>
