feat: function to count time session + logout function

--- a/ui.frontend/src/app/components/footer/footer.component.html
+++ b/ui.frontend/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer-container ">
+<footer class="footer-container">
   <div class="left-container">
     <p>
       Essa janela do navegador é usada para manter sua sessão de autenticação
@@ -7,14 +7,14 @@
     </p>
   </div>
   <div class="right-container">
-      <div class="time-session">
-          <p class="time-session__label">Application refresh in</p>
-          <div class="time-session__timer">
-              <p class="seconds-number">10</p>
-              <p class="seconds-label">seconds</p>
-          </div>
-      </div> 
-      <button class="btn-keep-browsing">Continuar Navegando</button>
-      <button class="btn-logout">Logout</button>
+    <div class="time-session">
+      <p class="time-session__label">Application refresh in</p>
+      <div class="time-session__timer">
+        <p class="seconds-number">{{ timer }}</p>
+        <p class="seconds-label">seconds</p>
+      </div>
+    </div>
+    <button class="btn-keep-browsing" (click)="keepBrowsing()">Continuar Navegando</button>
+    <button class="btn-logout" (click)="logout()">Logout</button>
   </div>
 </footer>
