--- a/ui.frontend/src/app/components/weather/weather.component.scss
+++ b/ui.frontend/src/app/components/weather/weather.component.scss
@@ -3,19 +3,30 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Mark Pro";
+  font-style: normal;
+  color: #222222;
+  margin: 0;
 
-  > p {
-    font-family: "Mark Pro";
-    font-style: normal;
-    color: #222222;
-    margin: 0;
-  }
   .local {
     font-weight: 400;
     font-size: 14px;
   }
-  .temperature {
-    font-weight: 700;
-    font-size: 48px;
+
+  .temperature-container {
+    display: flex;
+    flex-direction: row;
+
+    > .icon {
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
+
+    > .temperature {
+      font-weight: 700;
+      font-size: 48px;
+      margin: 0;
+    }
   }
 }
