--- a/ui.frontend/src/app/components/header/header.component.html
+++ b/ui.frontend/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header-container">
-  <ng-container>
-    <img [src]="image.src" />  
-  </ng-container>
+  <div>
+    <img [src]="image.src" />
+  </div>  
   <app-clock></app-clock>
   <app-weather></app-weather>
 </header>
