--- a/ui.frontend/src/app/components/header/header.component.scss
+++ b/ui.frontend/src/app/components/header/header.component.scss
@@ -1,4 +1,12 @@
 .header-container {
-    width: 100%;
-    height: 260px;
+    height: 187px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background: transparent;
+    padding-top: 25px;
+
+    > div > img {
+        width: 200px;
+    }
 }
