--- a/ui.frontend/src/styles.scss
+++ b/ui.frontend/src/styles.scss
@@ -63,14 +63,6 @@ body {
   }
 }
 
-.cmp-custom-header {
-  padding-top: 25px;
-  display: flex;
-  flex-direction: row;
-  height: 187px;
-  background: #e5e5e5;
-}
-
 .cmp-custom-image {
   > div > img {
     background-size: cover;
@@ -94,9 +86,12 @@ body {
 }
 
 .cmp-background {
-  &__gray {
+  &__baltic-sea {
     background: linear-gradient(180deg, #33383d 0%, #1c1d20 100%);
-    box-shadow: 4px 4px 70px rgba(0, 0, 0, 0.25);
+  }
+
+  &__gray-90 {
+    background: #e5e5e5;
   }
 }
 
