--- a/ui.frontend/src/app/components/login/login.component.scss
+++ b/ui.frontend/src/app/components/login/login.component.scss
@@ -37,17 +37,29 @@
   &__input {
     height: 60px;
     margin-top: 32px;
-    font-family: "Mark Pro";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    background: transparent;
     border: 1px solid #ffffff;
     box-sizing: border-box;
-    border-radius: 50px;
-    color: #e0e0e0;
+    border-radius: 50px;    
     padding-left: 20px;
+
+    > input {
+      height: 100%;
+      width: 88%;
+      font-family: "Mark Pro";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 20px;
+      background: transparent;
+      color: #e0e0e0;
+      border: 0;
+      outline: none;
+    }
+
+    > fa-icon {
+      margin-left: 5px;
+      color: #c0c0c0;
+    }    
   }
 
   .invalid {
